--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,17 @@
 *.dll
 *.so
 *.dylib
-server
-migrate
-seed
-main
+# Ignore binaries only in the root directory
+/server
+/migrate
+/seed
+/main
 
 # Test binary, built with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
+# Output of the go coverage tool
 *.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
 
 # Go workspace file
 go.work
